--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <figure>
-        <img src="Images/matrix3.gif" alt="Matrix Background"
+        <img src="matrix3.gif" alt="Matrix Background"
         height="1000"
         width="1500"
         opacity: 0.5;>
