--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section>
         <h4>About Me</h4>
-        <img src="Images/WebsitePic.jpeg"
+        <img src="WebsitePic.jpeg"
         height="400"
         width="300">
         
