--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
       <figure class="wrapper">
-        <img src="Images/matrix3.gif" alt="Matrix Background"
+        <img src="matrix3.gif" alt="Matrix Background"
         height="1000"
         width="1500"
         opacity: 0.5;>
@@ -35,7 +35,7 @@
 
       <section class="wrapper">
         <h4>About Me</h4>
-        <img src="Images/WebsitePic.jpeg"
+        <img src="WebsitePic.jpeg"
         height="400"
         width="300">
         
