--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </main>
 
 
-      <figure class="wrapper">
+      <figure>
         <img src="matrix3.gif" alt="Matrix Background"
         height=100%
         width=100%
