--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section class="wrapper2">
         <h4>About Me</h4>
-        <img src="newPic2.jpeg"
+        <img src="newPic2.jpg"
         height="400"
         width="300">
         
