--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h5 class="wrapper">Contact Me!</h5>
         
         <a href="mailto:sinclairCHansen@gmail.com"targets="blank">Email</a>
-        <a href="https://www.linkedin.com/in/sinclair-hansen-b1b3b4310/"targets="blank">Linkdin</a>
+        <a href="https://www.linkedin.com/in/sinclair-hansen-b1b3b4310/"targets="blank">LinkedIn</a>
       </footer>
         
 
