--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       <div2 class="wrapper">
           <h5>Here are some of my current projects!</h5>
-        <h5>In progress...</h5>
+        <img src="futureCodersBanner.png" alt="futureCoders Logo">
       </div2>
 
 
