--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       
       <div2 class="wrapper">
           <h5>Here are some of my current projects!</h5>
-        <img src="FutureCodersLogo.png" alt="futureCoders Logo">
+        <img class = "wrapper" src="FutureCodersLogo.png" alt="futureCoders Logo"
+          height = "100"
+          width = "100"
+          >
       </div2>
 
 
