--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       <div2 class="wrapper">
           <h5>Here are some of my current projects!</h5>
-        <img class = "wrapper" src="FutureCodersLogo.png" alt="futureCoders Logo"
+        <img class = "image" src="FutureCodersLogo.png" alt="futureCoders Logo"
           height = "100"
           width = "100"
           >
