--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         <div2 class="wrapper">
           <h5>Here are some of my current projects!</h5>
         <img src="FutureCodersLogo.png" alt="futureCoders Logo"
-          height = "100"
-          width = "100"
+          height = "300"
+          width = "300"
           >
+          <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
+          coding resources to students that don't have them. Website is under construction now</p>
       </div2>
 
       </section>
