--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
       
         <div2 class="wrapper">
           <h5>Here are some of my current projects!</h5>
-        <img src="FutureCodersLogo.png" alt="futureCoders Logo"
+        <img src="FutureCodersLogo.png" href = "https://linkedin.com/company/future-coders-foundation" alt="futureCoders Logo"
           height = "300"
           width = "300"
           >
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
-          coding resources to students that don't have them. Website is under construction now</p>
+          coding resources to students that don't have them. Website is under construction</p>
       </div2>
 
       </section>
