--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           height = "300"
           width = "300"
           >
-          <a href = "https://linkedin.com/company/future-coders-foundation""targets="blank">Future Coders Foundation</a>
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
-          coding resources to students that don't have them. Website is under construction</p>
+          coding resources to students that don't have them. Website is under construction; </p>
+          <a href = "https://linkedin.com/company/future-coders-foundation""targets="blank">Future Coders Foundation LinkedIn</a>
       </div2>
 
       </section>
