--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <section class = "box">
         <h4>About Me</h4>
         <img src="newPic2.jpg"
-        height="400"
-        width="300">
+        height="60%"
+        width="50%">
         <p>Hello! My name is Sinclair Hansen and I am a Computer Science student from Schoolcraft College! I love learning about programming, machine learning and A.I. I have experience with Python, C++, HTML and CSS. </p>
       </section>
 
