--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </figure>
 
 
-      <section class = "box">
+      <section>
         <h4>About Me</h4>
         <img src="newPic2.jpg"
         height="60%"
