--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <section>
           <h4>Here are some of my current projects!</h4>
           <img src="FutureCodersLogo.png"   alt="futureCoders Logo"
-          height = "300"
-          width = "300"
+          height = "50%"
+          width = "50%"
           >
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
           coding resources to students that don't have them. Website is under construction; </p>
