--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
       <section>
         <h4>About Me</h4>
         <img src="newPic2.jpg"
-        height="50%"
-        width="50%">
-        <p>Hello! My name is Sinclair Hansen and I am a Computer Science student from Schoolcraft College! I love learning about programming, machine learning and A.I. I have experience with Python, C++, HTML and CSS. </p>
+        height="40%"
+        width="40%">
+        <p>Hello! My name is Sinclair Hansen and I am a Computer Science student from 
+          Schoolcraft College! I love learning about programming, machine learning and A.I. 
+          I have experience with Python, C++, HTML and CSS. </p>
       </section>
 
 
@@ -47,8 +49,8 @@
       <section>
           <h4>Here are some of my current projects!</h4>
           <img src="FutureCodersLogo.png"   alt="futureCoders Logo"
-          height = "50%"
-          width = "50%"
+          height = "30%"
+          width = "30%"
           >
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
           coding resources to students that don't have them. Website is under construction; </p>
