--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
           coding resources to students that don't have them. Website is under construction; </p>
           <a href = "https://linkedin.com/company/future-coders-foundation/"targets="blank">Future Coders Foundation LinkedIn</a>
       </section>
+          <img src="Not Too Shabby.png"   alt="shabby Logo"
+          height = "30%"
+          width = "30%"
+          >
+          <p> This is a portfolio website that I developed for a small buisiness called 'Not Too Shabby' It showcases
+          furniture projects and utilizes basic website nagivation. My goal going forward with this project is to make it
+          more mobile-friendly.</p>
+          <a href = "https://design-not2shabby.github.io/"targets="blank">  Not Too Shabby Portfolio </a>
+
+      <section>
+
+
+
+        
+      </section>
 
 
       
