--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           >
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
           coding resources to students that don't have them. Website is under construction; </p>
-          <a href = "https://linkedin.com/company/future-coders-foundation/"targets="blank">Future Coders Foundation LinkedIn</a>
+          <a class = "button" href = "https://linkedin.com/company/future-coders-foundation/"targets="blank">Future Coders Foundation LinkedIn</a>
       </section>
           <img src="Not Too Shabby.png"   alt="shabby Logo"
           height = "30%"
@@ -63,7 +63,7 @@
           <p> This is a portfolio website that I developed for a small buisiness called 'Not Too Shabby' It showcases
           furniture projects and utilizes basic website nagivation. My goal going forward with this project is to make it
           more mobile-friendly.</p>
-          <a href = "https://design-not2shabby.github.io/"targets="blank">  Not Too Shabby Portfolio </a>
+          <a class = "button" href = "https://design-not2shabby.github.io/"targets="blank">  Not Too Shabby Portfolio </a>
 
       <section>
 
