--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <img src="newPic2.jpg"
         height="30%"
         width="30%">
-        <p>Hello! My name is Sinclair Hansen and I am a Computer Science student from 
-          Schoolcraft College! I love learning about programming, machine learning and A.I. 
-          I have experience with Python, C++, HTML and CSS. </p>
+        <p>Hello! My name is Sinclair Hansen and I'm a Computer Science student at Schoolcraft College preparing to 
+          transfer to a four-year university next Fall. I possess skills in Python and C++ (OOP) from coursework.
+          I also actively engage with HTML, CSS, and Pytorch in my free time. My aim is to specialize in AI and ML. In my free time 
+        I'm an active member on campus. I am the student leader of the math and physics club and a math tutor at Schoolcraft's 
+        learning center. I consistently strive to learn more about programming, so feel free to check out my current projects!</p>
       </section>
 
 
