--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
         <h4>Feel free to reach out!</h4>
         
-        <a href="mailto:sinclairCHansen@gmail.com"targets="blank" rel="noopener noreferrer">Email</a>
-        <a href="https://www.linkedin.com/in/sinclair-hansen-b1b3b4310/"target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a class = "button" href="mailto:sinclairCHansen@gmail.com"targets="blank" rel="noopener noreferrer">Email</a>
+        <a class = "button" href="https://www.linkedin.com/in/sinclair-hansen-b1b3b4310/"target="_blank" rel="noopener noreferrer">LinkedIn</a>
       </footer>
         
 
