--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           >
           <p> This is a Machine Learning program I made using Pytorch. The program identifies playing cards and displays results using
           matplotlib. </p>
-          <a class = "button" href = "https://github.com/sinclairHansen/Card-Sort"target="_blank" rel="noopener noreferrer">Project GitHub Repository</a>
+          <a class = "button" href = "https://github.com/sinclairHansen/Card-Sort"target="_blank" rel="noopener noreferrer">Card Sort Repository</a>
       </section>
       
       <section>
@@ -76,7 +76,7 @@
           >
           <p> I made a weather app using Python. The program imports weahter data using OpenWeather API and displays weather results for users.
           The goal going forward is to update the UI and to made a 7-day forecast. </p>
-          <a class = "button" href = "https://github.com/sinclairHansen/weatherApp"target="_blank" rel="noopener noreferrer">Project GitHub Repository</a>
+          <a class = "button" href = "https://github.com/sinclairHansen/weatherApp"target="_blank" rel="noopener noreferrer">Weather App Repository</a>
       </section>
          
       <section>
