--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
             
       <section>
-          <img src="CardSort.jpg"   alt="Card Sort Logo Logo"
+          <img src="cardSort.jpg"   alt="Card Sort Logo"
           height = "30%"
           width = "30%"
           >
