--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           width = "30%"
           >
           <p> This is a Machine Learning program I made using Pytorch. The program identifies playing cards and displays results using
-          matplotlib. </p>
+          matplotlib and numpy. </p>
           <a class = "button" href = "https://github.com/sinclairHansen/Card-Sort"target="_blank" rel="noopener noreferrer">Card Sort Repository</a>
       </section>
       
@@ -74,8 +74,10 @@
           height = "30%"
           width = "30%"
           >
-          <p> I made a weather app using Python. The program imports weahter data using OpenWeather API and displays weather results for users.
-          The goal going forward is to update the UI and to made a 7-day forecast. </p>
+          <p> This python program uses the OpenWeather API to retrieve current weather data. The program asks user for a 
+          city and outputs current weather conditions and temperature. The goal going forward for the program is to improve the UI using css styling and to output weekly weather information.This python program uses the OpenWeather API to retrieve current weather data.
+          The program asks user for a city and outputs current weather conditions and temperature. The goal going forward for the program is to improve the UI using css styling and to output weekly weather information.
+          </p>
           <a class = "button" href = "https://github.com/sinclairHansen/weatherApp"target="_blank" rel="noopener noreferrer">Weather App Repository</a>
       </section>
          
