--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
           width = "30%"
           >
           <p> This python program uses the OpenWeather API to retrieve current weather data. The program asks user for a 
-          city and outputs current weather conditions and temperature. The goal going forward for the program is to improve the UI using css styling and to output weekly weather information.This python program uses the OpenWeather API to retrieve current weather data.
-          The program asks user for a city and outputs current weather conditions and temperature. The goal going forward for the program is to improve the UI using css styling and to output weekly weather information.
+          city and outputs current weather conditions and temperature. The goal going forward for the program is to improve the UI using css styling and to output weekly weather information.
           </p>
           <a class = "button" href = "https://github.com/sinclairHansen/weatherApp"target="_blank" rel="noopener noreferrer">Weather App Repository</a>
       </section>
