--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section>
         <h4>About Me</h4>
-        <img src="newPic2.jpg"
+        <img src="PersonalPhoto.jpg"
         height="30%"
         width="30%">
         <p>Hello! My name is Sinclair Hansen and I'm a Computer Science student at Schoolcraft College preparing to 
