--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </figure>
 
 
-      <section>
+      <section class ="about">
         <h4>About Me</h4>
         <img src="PersonalPhoto.jpg"
         height="30%"
