--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           >
           <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
           coding resources to students that don't have them. Website is under construction; </p>
+          <a class = "button" href="https://futurecodersfoundation.github.io"targets="blank" rel="noopener noreferrer">Future Coders Website</a>
           <a class = "button" href = "https://linkedin.com/company/future-coders-foundation/"target="_blank" rel="noopener noreferrer">Future Coders Foundation LinkedIn</a>
       </section>
             
