--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
 
       <section>
-        <h4 class = "aboutText">About Me</h4>
+        <h5 class = "aboutText">About Me</h5>
         <img src="PersonalPhoto.jpg"
         height="30%"
         width="30%">
-        <p class = "aboutText">Hello! My name is Sinclair Hansen and I'm a Computer Science student at Schoolcraft College preparing to 
+        <h5 class = "aboutText">Hello! My name is Sinclair Hansen and I'm a Computer Science student at Schoolcraft College preparing to 
           transfer to a four-year university next Fall. I possess skills in Python and C++ (OOP) from coursework.
           I also actively engage with HTML, CSS, and Pytorch in my free time. My aim is to specialize in AI and ML. In my free time 
         I'm an active member on campus. I am the student leader of the math and physics club and a math tutor at Schoolcraft's 
-        learning center. I consistently strive to learn more about programming, so feel free to check out my current projects!</p>
+        learning center. I consistently strive to learn more about programming, so feel free to check out my current projects!</h5>
       </section>
 
 
