--- a/index.html
+++ b/index.html
@@ -96,9 +96,15 @@
 
       </main>
           
-    <footer>
-
-    </footer>
+        <footer>
+  
+          <h4>Feel free to reach out!</h4>
+  
+          
+          <a class = "button" href="https://github.com/sinclairHansen"targets="blank" rel="noopener noreferrer">GitHub</a>
+          <a class = "button" href="mailto:sinclairCHansen@gmail.com"targets="blank" rel="noopener noreferrer">Email</a>
+          <a class = "button" href="https://www.linkedin.com/in/sinclair-hansen-b1b3b4310/"target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        </footer>
 
 
 
