--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
 
         <section2 class = "section2">
             <h4></h4>
-            <img class ="aboutImage" src="populationImage.jpg"   alt="Population Logo">
+            <img class ="aboutImage" src="earthPhoto.jpg"   alt="Population Logo">
             <p> The is a data analysis project I made in Python. A world population dataset is used as input, and I 
                 utilized libraries like matplotlib, numpy, pandas, and folium to create graphs/maps of the data. 
             </p>
