--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
             </h2>
           </div>
         </section>
+        <div class="overlay-text2">Hi! I'm Sinclair</div>
         <img class = "aboutImage" src="SinclairPhoto.jpg" alt="Sinclair Photo">
 
         
 
         <div class="image-container">
+          
 
 
 
