--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </h2>
           </div>
         </section>
-        <div class="overlay-text2">Hi! I'm Sinclair</div>
+
         <img class = "aboutImage" src="SinclairPhoto.jpg" alt="Sinclair Photo">
 
         
@@ -78,7 +78,7 @@
 
 
 
-
+          <div class="overlay-text">Hi! I'm Sinclair</div>
           <div class="overlay-text2">Overview</div>
 
           <div class="overlay-text">  🎓I am a Sophomore CS student studying at Schoolcraft College with plans to transfer to a 4-year next Fall 
