--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="overlay-text">Hi! I'm Sinclair</div>
           <div class="overlay-text2">Overview</div>
 
-          <div class="overlay-text">  🎓I am a Sophomore CS student studying at Schoolcraft College with plans to transfer to a 4-year next Fall 
+          <div class="overlay-text">  🎓I am a Sophomore CS student studying at Schoolcraft College who is transferring to The University of Michigan in the Fall
           </div>
           <div class="overlay-text"> 💡 I have three years of coding experience in Python and C++ with goals to make impactful coding solutions
           </div>
