--- a/projects.html
+++ b/projects.html
@@ -74,9 +74,9 @@
             <img class ="aboutImage" src="MRIlogo.jpg"   alt="Tumor Detector">
             <p>This is a ML project I made that detects brain tumors in MRI scans. It was coded in Python using Pytorch, matplotlib, timm, numpy, and pandas libraries.
             I presented this program at the STEAM @ Schoolcraft Conference, and received first place. I have a lot of researched poured into this project so please check out my GitHub repository.</p>
-            <a class = "button" href = "https://github.com/sinclairHansen/TumorDetection"target="_blank" rel="noopener noreferrer">Tumor Detector</a>
+            <a class = "button" href = "https://github.com/sinclairHansen/TumorDetection"target="_blank" rel="noopener noreferrer">Tumor Detection</a>
         </section2>
-        <p><</p>
+        <p></p>
         <section2 class = "section2">
             <img class ="aboutImage" src="FutureCodersLogo.png"   alt="futureCoders Logo">
             <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
