--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,10 @@
         <section2 class ="section2">
             <h4></h4>
             <img class ="aboutImage" src="MRIlogo.jpg"   alt="Tumor Detector">
-            <p>This is a ML project I made that detects brain tumors in MRI scans. It was coded in Python using Pytorch, matplotlib, timm, numpy, and pandas libraries.
-            I presented this program at the STEAM @ Schoolcraft Conference, and received first place. I have a lot of researched poured into this project so please check out my GitHub repository.</p>
+            <p>Using the PyTorch,timm, matplotlib, and numpy libraries, I made a
+              ML program that detects gliomas, meningioma, and pituitary tumors in MRI scans. 
+              This program trains the model using over 5000 images. I presented this at the STEAM @ Schoolcraft conference, 
+              showing how AI is used to positively impact the medical field and received first place for my work.</p>
             <a class = "button" href = "https://github.com/sinclairHansen/TumorDetection"target="_blank" rel="noopener noreferrer">Tumor Detection</a>
         </section2>
         <p></p>
