--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
               ML program that detects gliomas, meningioma, and pituitary tumors in MRI scans. 
               This program trains the model using over 5000 images. I presented this at the STEAM @ Schoolcraft conference, 
               showing how AI is used to positively impact the medical field and received first place for my work.</p>
-            <a class = "button" href = "https://github.com/sinclairHansen/TumorDetection"target="_blank" rel="noopener noreferrer">Tumor Detection</a>
+            <a class = "button" href = "tumorDetection.html" rel="noopener noreferrer">Tumor Detection Project</a>
         </section2>
         <p></p>
         <section2 class = "section2">
