--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -68,7 +68,7 @@
         The program is designed to assist doctors in identifying tumors quicker with lower error rates. 
         The program also shows how effortless it is to make a positive impact on our medical care using AI.</h3>
     <h2>Background</h2>
-    <img class ="floatImage" src="MRIlogo.jpg"   alt="MRI Image">
+    <img class ="floatImage" src="meningionaImage.png"   alt="meningioma">
     <h3>What kind of tumor is this? Although I don’t
        expect you to know the exact answer to this question, 
        many doctors are asked this on a daily basis. According 
