--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -176,7 +176,8 @@ the model adjusts its answers until it has a high accuracy or it runs through al
   of making programs that can positively impact the lives around us. This connection between AI and the medical field is something I want to dive more into 
   as I continue my career and I want to make more AI vision projects. 
 </h3>
-<h3>I have attached the slides for my presentation below. For those who don't use GitHub, there is also a slide of the code.</h3>
+<h3>I have attached the slides for my presentation below. For those who don't use GitHub, there is also a slide of the code. For those interested
+in the answer to the question at the top --> meningioma </h3>
 <h2>Thank you</h2>
 
 
