--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -190,5 +190,5 @@ in the answer to the question at the top --> meningioma </h3>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSozsA3cCeDoUBlFT5U5mV3GHgxiQz6I1ge3dMo9SoqyVSXOOeJTDmJXop6GcaavUraapulkw3sTf5K/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <h1>Works Cited</h1>
-<img class ="centerImage" src="TumorDetectionWorksCited.png"   alt="Works Cited">
+<img class ="centerImage" src="WorksCited.png"   alt="Works Cited">
 
