--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -166,7 +166,8 @@ the model adjusts its answers until it has a high accuracy or it runs through al
 </h3>
 <h3>According to HealthfulHelps, as of 2023 about 75% of hospitals in the US have started implementing AI-driven solutions
   for their patients. As well as this, about 60% of hospitals are offering AI-based telemedicine so patients can get care from home (HealthfulHelps).
-  My goals for my program are to help show how a few thousand images and models can revolutionize the way we get our medical care. 
+  As this technology continues to advance, this impact will continue to grow, and more people will benefit as a result.
+  The goal for my program is to show how a few thousand images and a solid model can revolutionize the way we get medical care. 
 </h3>
 
 <h2>Reflection</h2>
