--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -73,15 +73,15 @@
        expect you to know the exact answer to this question, 
        many doctors are asked this on a daily basis. According 
        to the American Brain Tumor Association, 90,000 Americans 
-       are diagnosed with a brain tumor each year. This is clearly
-        a prevalent issue in hospitals, leading to many doctors opting to use AI to assist in diagnosing tumors. Using AI’s and attention to detail, we can
+       are diagnosed with a brain tumor each year (Brain Tumor FAQ). This is clearly
+        a prevalent issue in hospitals, leading to many doctors opting to use AI to assist in diagnosing tumors. Using AI’s attention to detail, we can
       bridge AI with the medical field to improve patient care and promote medical innovation. </h3>
       <h2>What is a Tumor?</h2>
       <h3>According to the Cleveland Clinic, "A tumor, or neoplasm, 
         is a mass of abnormal cells that form in your body. Tumors can affect
          tissues, glands, organs, skin and bone. They can be big or small. You 
-         can have a single tumor or more than one." Tumors are split into two categories: benign and malignant.
-        Benign tumors are noncancerous,stay localized, and do not spread to other tissues. Malignant tumors are cancerous
+         can have a single tumor or more than one" (Cleveland Clinic). Tumors are split into two categories: benign and malignant.
+        Benign tumors are noncancerous, stay localized, and do not spread to other tissues. Malignant tumors are cancerous
       and can rapidly spread to other parts of the body (Cleveland Clinic).</h3>
       <h2>Common Types of Brain Tumors</h2>
       <h3>There are three common types of tumors that I focused on for my program. The most common type
@@ -99,7 +99,8 @@
         in issues a patient has. 
       </h3>
     <h2>My Program</h2>
-    <h3>I wanted to combine my interest in this topic with my love for programming. I coded my project in Python
+    <h3>I wanted to combine my interest in this topic with my love for programming, which led to the idea of making a tumor detecting program.
+      I coded my project in Python
       and used PyTorch and timm libraries for training. I imported about 5000 labeled images of meningiomas, gliomas,
     pituitary, and normal MRI scans. In order to train the model I used a pre-trained model and supervised learning. Supervised learning is when
   we import images into a model with labels on the correct description. In my case, my images had the correct type of tumor labeled. These images are given
