--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
             coding resources to students that don't have them. I helped build the website using HTML/CSS. A Web3 API
          was imported for the contacts page. </p>
-            <a class = "button" href="https://futurecodersfoundation.github.io"targets="_blank" rel="noopener noreferrer">FCF Website</a>
+            <a class = "button" href="https://futurecodersfoundation.github.io"targets="blank" rel="noopener noreferrer">FCF Website</a>
         </section2>
 
         <section2 class = "section2">
