--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -55,7 +55,7 @@
     <h1>Pixels to Prognosis: Machine Learning in Tumor Detection</h1>
     <h3>Language: Python</h3>
     <h3>Libraries: PyTorch, timm, numpy, pandas, matplotlib, and glob</h3>
-    <h4><a class = "button" href = "https://github.com/sinclairHansen/TumorDetection" targets="blank" rel="noopener noreferrer">GitHub</a>
+    <h4><a class = "button" href = "https://github.com/sinclairHansen/TumorDetection" target="_blank" rel="noopener noreferrer">GitHub</a>
     </h4>
 
 
