--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -190,8 +190,10 @@ in the answer to the question at the top --> meningioma </h3>
 
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ46B2c-nMUPXV_DroYoFmGWM9dIiNTTFT1IyPXwYFcitbTCLhEYg6exYV-0KLtHwENRHE4OrOIp0km/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSozsA3cCeDoUBlFT5U5mV3GHgxiQz6I1ge3dMo9SoqyVSXOOeJTDmJXop6GcaavUraapulkw3sTf5K/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-<img class="centerImage" src="Arnold.jpg"   alt="Its-Not-A-Tumor">
 
 <h1>Works Cited</h1>
 <img class ="centerImage" src="WorksCited.png"   alt="Works Cited">
+<img class="centerImage" src="Arnold.jpg"   alt="Its-Not-A-Tumor"
+  width: 50%;
+  height: 50%;>
 
