--- a/experience.html
+++ b/experience.html
@@ -58,11 +58,20 @@
     <div class="timeline">
       <div class="container left">
         <div class="content">
-          <h2>Sept. 2024</h2>
-          <p>Started Future Coders Foundation with the goals of providing laptops to students interested in coding.</p>
+          <h2>March 2025</h2>
+          <p>I was honored to be awarded first place for Schoolcraft's Pythagorean Prize; this award goes to the top three math students. I also had
+          the opportunity to present at STEAM @ Schoolcraft and I recieved first place for my program that detects brain tumors. </p>
         </div>
       </div>
       <div class="container right">
+        <div class="content">
+          <h2>Sept. 2024</h2>
+          <p>Started Future Coders Foundation with the goals of providing laptops to students interested in coding. I had the opportunity to grow this 
+          project through UofM's optiMize program.
+          </p>
+        </div>
+      </div>
+      <div class="container left">
         <div class="content">
           <h2>Sept. 2024</h2>
           <p>I was promoted to President of the Math and Physics Club. I have the opportunity to run club meetings and
@@ -70,7 +79,7 @@
           </p>
         </div>
       </div>
-      <div class="container left">
+      <div class="container right">
         <div class="content">
           <h2>July 2024</h2>
           <p>I joined the Schoolcraft Learning Center as an Undergraduate Math Tutor. I help Schoolcraft students on most math classes
@@ -78,20 +87,12 @@
           </p>
         </div>
       </div>
-      <div class="container right">
+      <div class="container left">
         <div class="content">
           <h2>Dec 2023</h2>
           <p>I joined Schoolcraft's Honors Program. Through the program I am given the opportunity to work with professors on class-related projects.
             Since being in the program I have built a Rubik's cube timer in C++, written a Psycology literature review and worked with my statistics professor
             on a data-visualization project. 
-          </p>
-        </div>
-      </div>
-      <div class="container left">
-        <div class="content">
-          <h2>2022</h2>
-          <p>Joined my first coding club, Girls Who Code, in high school. It gave me insights to a CS degree and gave me the opportunity
-            to meet other women in tech. 
           </p>
         </div>
       </div>
