--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -193,7 +193,7 @@ in the answer to the question at the top --> meningioma </h3>
 
 <h1>Works Cited</h1>
 <img class ="centerImage" src="WorksCited.png"   alt="Works Cited">
-<img class="centerImage" src="Arnold.jpg"   alt="Its-Not-A-Tumor"
+<img class="arnoldImage" src="Arnold.jpg"   alt="Its-Not-A-Tumor"
   width=25%
   height=25%>
 
