--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -67,15 +67,13 @@
         a machine learning-based program capable of identifying different types of tumors in MRI scans. 
         The program is designed to assist doctors in identifying tumors quicker with lower error rates. 
         The program also shows how effortless it is to make a positive impact on our medical care using AI.</h3>
-    <h2>Background</h2>
+    <h2>Background: Why AI in Tumor Detection?</h2>
     <img class ="floatImage" src="meningionaImage.png"   alt="meningioma">
-    <h3>What kind of tumor is this? Although I don’t
-       expect you to know the exact answer to this question, 
-       many doctors are asked this on a daily basis. According 
-       to the American Brain Tumor Association, 90,000 Americans 
-       are diagnosed with a brain tumor each year (Brain Tumor FAQ). This is clearly
-        a prevalent issue in hospitals, leading to many doctors opting to use AI to assist in diagnosing tumors. Using AI’s attention to detail, we can
-      bridge AI with the medical field to improve patient care and promote medical innovation. </h3>
+    <h3>According to the American Brain Tumor Association, 
+      90,000 Americans are diagnosed with a brain tumor each year. Early and 
+      accurate diagnosis is critical for effective treatment. AI's ability to detect 
+      patterns in medical images can significantly reduce diagnostic errors and improve 
+      patient outcomes.</h3>
       <h2>What is a Tumor?</h2>
       <h3>According to the Cleveland Clinic, "A tumor, or neoplasm, 
         is a mass of abnormal cells that form in your body. Tumors can affect
@@ -84,13 +82,16 @@
         Benign tumors are noncancerous, stay localized, and do not spread to other tissues. Malignant tumors are cancerous
       and can rapidly spread to other parts of the body (Cleveland Clinic).</h3>
       <h2>Common Types of Brain Tumors</h2>
-      <h3>There are three common types of tumors that I focused on for my program. The most common type
-        is the meningioma with over 30% of tumors being of this type. This tumor forms in the meninges, the 
-        three layers of tissue that surround and protect the brain. Another 33% of all 
-        brain tumors are gliomas. These tumors arise from the glial cells that surround 
-        and support neurons. Lastly, 1 in 10 brain tumors are pituitary adenomas. This tumor forms in the pituitary
-        gland tissue (John Hopkins Medicine).
-      </h3>
+      <h3>Meningioma (>30%): Meningioma is 
+        the most common primary brain tumor, accounting for 
+        more than 30% of all brain tumors. Meningiomas originate in 
+        the meninges, the outer three layers of tissue that cover and protect 
+        the brain just under the skull. </h3>
+      <h3>Glioma (>30%): Glioma is a common type 
+        of tumor originating in the brain, but it can sometimes
+        be found in the spinal cord. These tumors arise from the glial cells that surround and support neurons. </h3>
+      <h3>Pituitary (10%): The least common of the three is the Pituitary tumor. This tumor commonly forms in the tissue surrounding
+        the pituitary gland. They may lead to issues with vision or the endocrine system (John Hopkins).
       <h2>Common Symptoms</h2>
       <h3>There are several common symptoms of brain tumors. Depending on the tumor's type and location,
         a patient may be able to see the tumor raised above the skin or feel it. There are a few other symptoms
