--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -93,12 +93,14 @@
       <h3>Pituitary (10%): The least common of the three is the Pituitary tumor. This tumor commonly forms in the tissue surrounding
         the pituitary gland. They may lead to issues with vision or the endocrine system (John Hopkins).
       <h2>Common Symptoms</h2>
-      <h3>There are several common symptoms of brain tumors. Depending on the tumor's type and location,
+      <h3>There are several common symptoms of tumors. Depending on the tumor's type and location,
         a patient may be able to see the tumor raised above the skin or feel it. There are a few other symptoms
-        including: fatigue, fever/chills, night sweats, or loss of appetite (Cleveland Clinic). These symptoms
-        are vague across many diseases, so utilizing AI's attention to detail can help doctors quickly narrow
-        in issues a patient has. 
+        including: fatigue, fever/chills, night sweats, or loss of appetite (Cleveland Clinic). 
       </h3>
+      <h3>Some symptoms apply specifically to brain tumors such as: Nausea, vision issues, headaches, 
+        confustion, memory loss, seizure, and many others (Moffitt). These symptoms
+        are common across many diseases, so utilizing AI's attention to detail can help doctors quickly narrow
+        in issues a patient has. </h3>
     <h2>My Program</h2>
     <h3>I wanted to combine my interest in this topic with my love for programming, which led to the idea of making a tumor detecting program.
       I coded my project in Python
@@ -186,12 +188,11 @@ The model in this program is a small scale version of programs like AlexNet. Whe
 </h3>
 
 <h2>Reflection</h2>
-<h3>This program has taught me a lot about how machine learning models work. I learned more about supervised learning,
-  gathering datasets, and testing my model. I also enjoyed tying my project to the medical field and researching more about tumors.
-  I believe programs like these are why I chose to go into this field because with the right research and a lot of time, we have the capability 
-  of making programs that can positively impact the lives around us. This connection between AI and the medical field is something I want to dive more into 
-  as I continue my career and I want to make more AI vision projects. 
-</h3>
+<h3> This was a rewarding project to develop, and I learned so much through my research. This project especially deepened my understanding
+of: </h3>
+<h3>Machine Learning Fundamentals: Supervised learning, dataset curation, and training models.</h3>
+<h3>AI in Healthcare: The potential and challenges of AI-driven diagnostics.</h3>
+<h3>Critical Thinking in AI: The importance of testing models beyond controlled datasets.</h3>
 <h3>I have attached the slides for my presentation below. For those who don't use GitHub, there is also a slide of the code. For those interested
 in the answer to the question at the top --> meningioma </h3>
 <h2>Thank you</h2>
