--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -193,8 +193,7 @@ of: </h3>
 <h3>Machine Learning Fundamentals: Supervised learning, dataset curation, and training models.</h3>
 <h3>AI in Healthcare: The potential and challenges of AI-driven diagnostics.</h3>
 <h3>Critical Thinking in AI: The importance of testing models beyond controlled datasets.</h3>
-<h3>I have attached the slides for my presentation below. For those who don't use GitHub, there is also a slide of the code. For those interested
-in the answer to the question at the top --> meningioma </h3>
+<h3>I have attached the slides for my presentation below. For those who don't use GitHub, there is also a slide of the code.</h3>
 <h2>Thank you</h2>
 
 
