--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -60,14 +60,14 @@
 
 
 
-    <h3>Abstract: In recent years, Artificial Intelligence (AI) 
+    <p>Abstract: In recent years, Artificial Intelligence (AI) 
         is innovating the medical field by diagnosing diseases earlier, 
         offering personalized treatment to patients, and reducing error in hospitals. 
         This research explores the application of AI in tumor detection through the development of 
         a machine learning-based program capable of identifying different types of tumors in MRI scans. 
         The program is designed to assist doctors in identifying tumors quicker with lower error rates. 
         The program also shows how effortless it is to make a positive impact on our medical care using AI.</h3>
-    <h2>Background: Why AI in Tumor Detection?</h2>
+    <h2>Background: Why AI in Tumor Detection?</p>
     <img class ="floatImage" src="meningionaImage.png"   alt="meningioma">
     <h3>According to the American Brain Tumor Association, 
       90,000 Americans are diagnosed with a brain tumor each year. Early and 
